--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="favicon.ico" rel="icon" type="image/x-icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HTML Library</title>
+<title>HTML Library Github</title>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <link href="css/material.css" rel="stylesheet" type="text/css" />
